apps/shop/cart/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-cart-dev
spec:
  host: shop-cart.shop-cart.svc.cluster.local
  subsets:
  - name: shop-cart-dev
    labels:
      app: shop-cart
      env: dev
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-cart-dev-d1a
    labels:
      app: shop-cart
      env: dev
      deploy.cloud.google.com/target-id: d1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
