apps/shop/cart/k8s/overlays/non-prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shop-cart-dev
spec:
  hosts:
  - shop-cart
  http:
  - match:
    - sourceLabels:
        app: shop-cart
        env: dev
    route:
    - destination:
        host: shop-cart
        subset: shop-cart-dev
